[package]

name = "gpe"
version = "0.0.1"
authors = ["Will Crichton <willcrichton@cmu.edu>"]

[dependencies.image]

git = "https://github.com/PistonDevelopers/image"

[dependencies.graphics]

git = "https://github.com/PistonDevelopers/graphics"

[dependencies.sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"
