[package]
name = "gpe"
version = "0.0.1"
authors = ["Will Crichton <willcrichton@cmu.edu>"]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 2

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"
rev = "4e0dc6ac0509b92a33fadc2e06a2a7d035472322"

[dependencies]
time = "*"